# src.canary

./: .gitignore  LICENSE  README.md  data_icons.json  index.js  package-lock.json  package.json
.github/workflows/: build.yml
chrome/android/: chrome_java_resources.gni  kiwi_java_resources.gni
chrome/android/java/res/drawable/: bookmark_check_gray.xml  btn_close_white.xml  btn_left.xml  btn_right.xml  btn_tab_close_normal.xml  btn_tabswitcher_modern.xml  btn_toolbar_hand.xml  btn_toolbar_home.xml  chromelogo16.xml  help_outline.xml  ic_adblock_mid.xml  ic_adblock_off.xml  ic_adblock_on.xml  ic_add_to_home_screen_r.xml  ic_backup_import.xml  ic_bookmarks.xml  ic_checked.xml  ic_customscript.xml  ic_desktop_mode.xml  ic_desktop_windows.xml  ic_divider.xml  ic_dots.xml  ic_exit_to_app.xml  ic_extensions.xml  ic_history_googblue_24dp.xml  ic_incognito.xml  ic_install_webapp.xml  ic_new_window.xml  ic_night_mode_off.xml  ic_night_mode_on.xml  ic_open_in_browser.xml  ic_photo_camera.xml  ic_qr_code.xml  ic_reading_list.xml  ic_recent_tabs.xml  ic_share_white_24dp.xml  ic_translate_r.xml  ic_unchecked.xml  ic_warning_white.xml  ic_zoom_plus.xml  (+21 more)
chrome/android/java/res/drawable-night/: tile_view_hairline_border_background.xml
chrome/android/java/res/layout/: adblock_layout.xml  dialog_edit_tile.xml  draggableitem.xml  fake_search_box_layout.xml  fre_tos_privacy_disclaimer.xml  mv_tiles_container.xml  new_tab_page_layout.xml  powered_by_chrome_footer.xml  radio_button_group_homepage_preference.xml  top_sites_tile_view_condensed.xml
chrome/android/java/res/menu/: bookmark_toolbar_menu.xml  main_menu.xml
chrome/android/java/res/values/: dimens.xml  ids.xml  strings.xml  values.xml
chrome/android/java/res/values-hdpi/: dimens.xml
chrome/android/java/res/xml/: main_preferences.xml  toolbar_preferences.xml
drawable/: btn_toolbar_reload.xml  ic_adblock_off.xml  ic_adblock_on.xml  ic_backup.xml  ic_backup_export.xml  ic_devtools.xml  ic_downloads.xml  ic_find_in_page_r.xml  ic_new_tab.xml  ic_passwords.xml  ic_settings.xml  ics_privacy_security.xml
scripts/: clean_images.js  extract_images.sh  get_icon.js
