# Copyright 2023 Kiwi Browser

kiwi_java_resources = [
    "java/res/drawable-night/tile_view_hairline_border_background.xml",

    "java/res/layout/adblock_layout.xml",
    "java/res/drawable/ic_adblock_on.xml",
    "java/res/drawable/ic_adblock_off.xml",
    "java/res/drawable/ic_adblock_mid.xml",

    "java/res/drawable-hdpi/ic_add_to_home_screen_r.png",
    "java/res/drawable-hdpi/ic_bookmarks.png",
    "java/res/drawable-hdpi/ic_clear_data.png",
    "java/res/drawable-hdpi/ic_desktop_mode.png",
    "java/res/drawable-hdpi/ic_downloads.png",
    "java/res/drawable-hdpi/ic_extensions.png",
    "java/res/drawable-hdpi/ic_find_in_page_r.png",
    "java/res/drawable-hdpi/ic_incognito.png",
    "java/res/drawable-hdpi/ic_new_tab.png",
    "java/res/drawable-hdpi/ic_night_mode_off.png",
    "java/res/drawable-hdpi/ic_night_mode_on.png",
    "java/res/drawable-hdpi/ic_recent_tabs.png",
    "java/res/drawable-hdpi/ic_share.png",
    "java/res/drawable-hdpi/ic_translate_r.png",
    "java/res/drawable-hdpi/ics_accessibility.png",
    "java/res/drawable-hdpi/ics_addresses.png",
    "java/res/drawable-hdpi/ics_clear_data.png",
    "java/res/drawable-hdpi/ics_dev_options.png",
    "java/res/drawable-hdpi/ics_edit_homepage.png",
    "java/res/drawable-hdpi/ics_languages.png",
    "java/res/drawable-hdpi/ics_lite_mode.png",
    "java/res/drawable-hdpi/ics_night_mode.png",
    "java/res/drawable-hdpi/ics_notifications.png",
    "java/res/drawable-hdpi/ics_passwords.png",
    "java/res/drawable-hdpi/ics_payments.png",
    "java/res/drawable-hdpi/ics_privacy_security.png",
    "java/res/drawable-hdpi/ics_search_engine.png",
    "java/res/drawable-hdpi/ics_services.png",
    "java/res/drawable-hdpi/ics_tab_switcher.png",
    "java/res/drawable-hdpi/ics_theme.png",
    "java/res/drawable-hdpi/ics_website_settings.png",
    "java/res/drawable-hdpi/logo_card_back.png",
    "java/res/drawable-mdpi/ic_add_to_home_screen_r.png",
    "java/res/drawable-mdpi/ic_bookmarks.png",
    "java/res/drawable-mdpi/ic_clear_data.png",
    "java/res/drawable-mdpi/ic_desktop_mode.png",
    "java/res/drawable-mdpi/ic_downloads.png",
    "java/res/drawable-mdpi/ic_extensions.png",
    "java/res/drawable-mdpi/ic_find_in_page_r.png",
    "java/res/drawable-mdpi/ic_incognito.png",
    "java/res/drawable-mdpi/ic_new_tab.png",
    "java/res/drawable-mdpi/ic_night_mode_off.png",
    "java/res/drawable-mdpi/ic_night_mode_on.png",
    "java/res/drawable-mdpi/ic_recent_tabs.png",
    "java/res/drawable-mdpi/ic_share.png",
    "java/res/drawable-mdpi/ic_translate_r.png",
    "java/res/drawable-mdpi/ics_accessibility.png",
    "java/res/drawable-mdpi/ics_addresses.png",
    "java/res/drawable-mdpi/ics_clear_data.png",
    "java/res/drawable-mdpi/ics_dev_options.png",
    "java/res/drawable-mdpi/ics_edit_homepage.png",
    "java/res/drawable-mdpi/ics_languages.png",
    "java/res/drawable-mdpi/ics_lite_mode.png",
    "java/res/drawable-mdpi/ics_night_mode.png",
    "java/res/drawable-mdpi/ics_notifications.png",
    "java/res/drawable-mdpi/ics_passwords.png",
    "java/res/drawable-mdpi/ics_payments.png",
    "java/res/drawable-mdpi/ics_privacy_security.png",
    "java/res/drawable-mdpi/ics_search_engine.png",
    "java/res/drawable-mdpi/ics_services.png",
    "java/res/drawable-mdpi/ics_tab_switcher.png",
    "java/res/drawable-mdpi/ics_theme.png",
    "java/res/drawable-mdpi/ics_website_settings.png",
    "java/res/drawable-mdpi/logo_card_back.png",
    "java/res/drawable-xhdpi/ic_add_to_home_screen_r.png",
    "java/res/drawable-xhdpi/ic_bookmarks.png",
    "java/res/drawable-xhdpi/ic_clear_data.png",
    "java/res/drawable-xhdpi/ic_desktop_mode.png",
    "java/res/drawable-xhdpi/ic_downloads.png",
    "java/res/drawable-xhdpi/ic_extensions.png",
    "java/res/drawable-xhdpi/ic_find_in_page_r.png",
    "java/res/drawable-xhdpi/ic_incognito.png",
    "java/res/drawable-xhdpi/ic_new_tab.png",
    "java/res/drawable-xhdpi/ic_night_mode_off.png",
    "java/res/drawable-xhdpi/ic_night_mode_on.png",
    "java/res/drawable-xhdpi/ic_recent_tabs.png",
    "java/res/drawable-xhdpi/ic_share.png",
    "java/res/drawable-xhdpi/ic_translate_r.png",
    "java/res/drawable-xhdpi/ics_accessibility.png",
    "java/res/drawable-xhdpi/ics_addresses.png",
    "java/res/drawable-xhdpi/ics_clear_data.png",
    "java/res/drawable-xhdpi/ics_dev_options.png",
    "java/res/drawable-xhdpi/ics_edit_homepage.png",
    "java/res/drawable-xhdpi/ics_languages.png",
    "java/res/drawable-xhdpi/ics_lite_mode.png",
    "java/res/drawable-xhdpi/ics_night_mode.png",
    "java/res/drawable-xhdpi/ics_notifications.png",
    "java/res/drawable-xhdpi/ics_passwords.png",
    "java/res/drawable-xhdpi/ics_payments.png",
    "java/res/drawable-xhdpi/ics_privacy_security.png",
    "java/res/drawable-xhdpi/ics_search_engine.png",
    "java/res/drawable-xhdpi/ics_services.png",
    "java/res/drawable-xhdpi/ics_tab_switcher.png",
    "java/res/drawable-xhdpi/ics_theme.png",
    "java/res/drawable-xhdpi/ics_website_settings.png",
    "java/res/drawable-xhdpi/logo_card_back.png",
    "java/res/drawable-xxhdpi/ic_add_to_home_screen_r.png",
    "java/res/drawable-xxhdpi/ic_bookmarks.png",
    "java/res/drawable-xxhdpi/ic_clear_data.png",
    "java/res/drawable-xxhdpi/ic_desktop_mode.png",
    "java/res/drawable-xxhdpi/ic_downloads.png",
    "java/res/drawable-xxhdpi/ic_extensions.png",
    "java/res/drawable-xxhdpi/ic_find_in_page_r.png",
    "java/res/drawable-xxhdpi/ic_incognito.png",
    "java/res/drawable-xxhdpi/ic_new_tab.png",
    "java/res/drawable-xxhdpi/ic_night_mode_off.png",
    "java/res/drawable-xxhdpi/ic_night_mode_on.png",
    "java/res/drawable-xxhdpi/ic_recent_tabs.png",
    "java/res/drawable-xxhdpi/ic_share.png",
    "java/res/drawable-xxhdpi/ic_translate_r.png",
    "java/res/drawable-xxhdpi/ics_accessibility.png",
    "java/res/drawable-xxhdpi/ics_addresses.png",
    "java/res/drawable-xxhdpi/ics_clear_data.png",
    "java/res/drawable-xxhdpi/ics_dev_options.png",
    "java/res/drawable-xxhdpi/ics_edit_homepage.png",
    "java/res/drawable-xxhdpi/ics_languages.png",
    "java/res/drawable-xxhdpi/ics_lite_mode.png",
    "java/res/drawable-xxhdpi/ics_night_mode.png",
    "java/res/drawable-xxhdpi/ics_notifications.png",
    "java/res/drawable-xxhdpi/ics_passwords.png",
    "java/res/drawable-xxhdpi/ics_payments.png",
    "java/res/drawable-xxhdpi/ics_privacy_security.png",
    "java/res/drawable-xxhdpi/ics_search_engine.png",
    "java/res/drawable-xxhdpi/ics_services.png",
    "java/res/drawable-xxhdpi/ics_tab_switcher.png",
    "java/res/drawable-xxhdpi/ics_theme.png",
    "java/res/drawable-xxhdpi/ics_website_settings.png",
    "java/res/drawable-xxxhdpi/ic_add_to_home_screen_r.png",
    "java/res/drawable-xxxhdpi/ic_bookmarks.png",
    "java/res/drawable-xxxhdpi/ic_clear_data.png",
    "java/res/drawable-xxxhdpi/ic_desktop_mode.png",
    "java/res/drawable-xxxhdpi/ic_downloads.png",
    "java/res/drawable-xxxhdpi/ic_extensions.png",
    "java/res/drawable-xxxhdpi/ic_find_in_page_r.png",
    "java/res/drawable-xxxhdpi/ic_incognito.png",
    "java/res/drawable-xxxhdpi/ic_new_tab.png",
    "java/res/drawable-xxxhdpi/ic_night_mode_off.png",
    "java/res/drawable-xxxhdpi/ic_night_mode_on.png",
    "java/res/drawable-xxxhdpi/ic_recent_tabs.png",
    "java/res/drawable-xxxhdpi/ic_share.png",
    "java/res/drawable-xxxhdpi/ic_translate_r.png",
    "java/res/drawable-xxxhdpi/ics_accessibility.png",
    "java/res/drawable-xxxhdpi/ics_addresses.png",
    "java/res/drawable-xxxhdpi/ics_clear_data.png",
    "java/res/drawable-xxxhdpi/ics_dev_options.png",
    "java/res/drawable-xxxhdpi/ics_edit_homepage.png",
    "java/res/drawable-xxxhdpi/ics_languages.png",
    "java/res/drawable-xxxhdpi/ics_lite_mode.png",
    "java/res/drawable-xxxhdpi/ics_night_mode.png",
    "java/res/drawable-xxxhdpi/ics_notifications.png",
    "java/res/drawable-xxxhdpi/ics_passwords.png",
    "java/res/drawable-xxxhdpi/ics_payments.png",
    "java/res/drawable-xxxhdpi/ics_privacy_security.png",
    "java/res/drawable-xxxhdpi/ics_search_engine.png",
    "java/res/drawable-xxxhdpi/ics_services.png",
    "java/res/drawable-xxxhdpi/ics_tab_switcher.png",
    "java/res/drawable-xxxhdpi/ics_theme.png",
    "java/res/drawable-xxxhdpi/ics_website_settings.png",

    "java/res/drawable-hdpi/ic_devtools.png",
    "java/res/drawable-mdpi/ic_devtools.png",
    "java/res/drawable-xhdpi/ic_devtools.png",
    "java/res/drawable-xxhdpi/ic_devtools.png",
    "java/res/drawable-xxxhdpi/ic_devtools.png",

    "java/res/drawable-hdpi/ics_toolbar_shortcut.png",
    "java/res/drawable-mdpi/ics_toolbar_shortcut.png",
    "java/res/drawable-xhdpi/ics_toolbar_shortcut.png",
    "java/res/drawable-xxhdpi/ics_toolbar_shortcut.png",
    "java/res/drawable-xxxhdpi/ics_toolbar_shortcut.png",

    "java/res/layout/dialog_edit_tile.xml",
    "java/res/layout/draggableitem.xml",

    "java/res/layout/radio_button_group_nightmode_preference.xml",
    "java/res/layout/radio_button_group_tabswitcher_preference.xml",
    "java/res/xml/nightmode_preferences.xml",
    "java/res/xml/tabswitcher_preferences.xml",
    "java/res/xml/toolbar_preferences.xml",

    "java/res/values-xhdpi/dimens.xml",
    "java/res/values-xxhdpi/dimens.xml",
]

chrome_java_resources_to_remove = [
    "java/res/drawable/ic_incognito.xml",
]
