# Copyright 2023 Kiwi Browser

kiwi_java_resources = [
    "java/res/drawable-night/tile_view_hairline_border_background.xml",
    "java/res/layout/adblock_layout.xml",
    "java/res/drawable/ic_adblock_on.xml",
    "java/res/drawable/ic_adblock_off.xml",
    "java/res/drawable/ic_adblock_mid.xml",
    "java/res/drawable-hdpi/logo_card_back.png",
    "java/res/drawable-mdpi/logo_card_back.png",
    "java/res/drawable-xhdpi/logo_card_back.png",
    "java/res/layout/dialog_edit_tile.xml",
    "java/res/layout/draggableitem.xml",
    "java/res/layout/radio_button_group_nightmode_preference.xml",
    "java/res/layout/radio_button_group_tabswitcher_preference.xml",
    "java/res/xml/nightmode_preferences.xml",
    "java/res/xml/tabswitcher_preferences.xml",
    "java/res/xml/toolbar_preferences.xml",
    "java/res/values-xhdpi/dimens.xml",
    "java/res/values-xxhdpi/dimens.xml",
    "java/res/drawable/bookmark_check_gray.xml",
    "java/res/drawable/btn_close_white.xml",
    "java/res/drawable/btn_left.xml",
    "java/res/drawable/btn_tab_close_normal.xml",
    "java/res/drawable/btn_tabswitcher_modern.xml",
    "java/res/drawable/btn_toolbar_hand.xml",
    "java/res/drawable/btn_toolbar_home.xml",
    "java/res/drawable/btn_toolbar_reload.xml",
    "java/res/drawable/ic_add_to_home_screen_r.xml",
    "java/res/drawable/ic_backup.xml",
    "java/res/drawable/ic_backup_export.xml",
    "java/res/drawable/ic_backup_import.xml",
    "java/res/drawable/ic_bookmarks.xml",
    "java/res/drawable/ic_checked.xml",
    "java/res/drawable/ic_clear_data.xml",
    "java/res/drawable/ic_desktop_mode.xml",
    "java/res/drawable/ic_devtools.xml",
    "java/res/drawable/ic_dots.xml",
    "java/res/drawable/ic_divider.xml",
    "java/res/drawable/ic_downloads.xml",
    "java/res/drawable/ic_exit_to_app.xml",
    "java/res/drawable/ic_extensions.xml",
    "java/res/drawable/ic_find_in_page_r.xml",
    "java/res/drawable/ic_history.xml",
    "java/res/drawable/ic_new_tab.xml",
    "java/res/drawable/ic_night_mode_off.xml",
    "java/res/drawable/ic_night_mode_on.xml",
    "java/res/drawable/ics_passwords.xml",
    "java/res/drawable/ic_photo_camera.xml",
    "java/res/drawable/ic_qr_code.xml",
    "java/res/drawable/ic_reading_list.xml",
    "java/res/drawable/ic_recent_tabs.xml",
    "java/res/drawable/ic_settings.xml",
    "java/res/drawable/ic_share.xml",
    "java/res/drawable/ic_translate_r.xml",
    "java/res/drawable/ic_unchecked.xml",
    "java/res/drawable/ic_warning_white.xml",
    "java/res/drawable/ics_clear_data.xml",
    "java/res/drawable/ics_lite_mode.xml",
    "java/res/drawable/ics_privacy_security.xml",
    "java/res/drawable/ics_services.xml",
    "java/res/drawable/ics_tab_switcher.xml",
    "java/res/drawable/ics_website_settings.xml",
    "java/res/drawable/ic_zoom_plus.xml",
    "java/res/drawable/menu_update.xml",
    "java/res/drawable/open_in_new_tab.xml",
    "java/res/drawable/permission_push_notification_off.xml",
    "java/res/drawable/ics_accessibility.xml",
    "java/res/drawable/btn_right.xml",
    "java/res/drawable/help_outline.xml",
    "java/res/drawable/ic_incognito.xml",
    "java/res/drawable/ics_payments.xml",
    "java/res/drawable/ics_search_engine.xml",
    "java/res/drawable/ics_theme.xml",
    "java/res/drawable/ics_toolbar_shortcut.xml",
    "java/res/drawable/ics_addresses.xml",
    "java/res/drawable/ics_dev_options.xml",
    "java/res/drawable/ics_night_mode.xml",
    "java/res/drawable/ics_notifications.xml",
    "java/res/drawable/ics_edit_homepage.xml",
    "java/res/drawable/ic_customscript.xml",
    "java/res/drawable/ic_custom_script.xml",
    "java/res/drawable/omnibox_info.xml",
    "java/res/drawable/omnibox_https_valid.xml",
    "java/res/drawable/ics_toolbar.xml",
    "java/res/drawable/chromelogo16.xml",
    "java/res/drawable/ics_languages.xml",
    "java/res/drawable/ic_find_in_page.xml",
    "java/res/drawable/ic_new_window.xml",
    "java/res/drawable/ic_open_in_browser.xml",
    "java/res/drawable/incognito_simple.xml",
    "java/res/drawable/location_bar_incognito_badge.xml",
    "java/res/drawable/settings_cog.xml",
    "java/res/drawable/ic_add_box_rounded_corner.xml",
    "java/res/drawable/ic_history_googblue_24dp.xml",
    "java/res/drawable/ic_folder_bookmarks.xml",
    "java/res/drawable/ic_folder_downloads.xml",
    "java/res/drawable/ic_translate.xml",
    "java/res/drawable/ic_desktop_windows.xml"
]

chrome_java_resources_to_remove = [
    "java/res/drawable-hdpi/bookmark_check_gray.png",
    "java/res/drawable-mdpi/bookmark_check_gray.png",
    "java/res/drawable-xhdpi/bookmark_check_gray.png",
    "java/res/drawable-xxhdpi/bookmark_check_gray.png",
    "java/res/drawable-xxxhdpi/bookmark_check_gray.png",
    "java/res/drawable-hdpi/btn_close_white.png",
    "java/res/drawable-mdpi/btn_close_white.png",
    "java/res/drawable-xhdpi/btn_close_white.png",
    "java/res/drawable-xxhdpi/btn_close_white.png",
    "java/res/drawable-xxxhdpi/btn_close_white.png",
    "java/res/drawable-hdpi/btn_left.png",
    "java/res/drawable-mdpi/btn_left.png",
    "java/res/drawable-xhdpi/btn_left.png",
    "java/res/drawable-xxhdpi/btn_left.png",
    "java/res/drawable-xxxhdpi/btn_left.png",
    "java/res/drawable-hdpi/btn_tab_close_normal.png",
    "java/res/drawable-mdpi/btn_tab_close_normal.png",
    "java/res/drawable-xhdpi/btn_tab_close_normal.png",
    "java/res/drawable-xxhdpi/btn_tab_close_normal.png",
    "java/res/drawable-xxxhdpi/btn_tab_close_normal.png",
    "java/res/drawable-hdpi/ic_add_to_home_screen_r.png",
    "java/res/drawable-mdpi/ic_add_to_home_screen_r.png",
    "java/res/drawable-xhdpi/ic_add_to_home_screen_r.png",
    "java/res/drawable-xxhdpi/ic_add_to_home_screen_r.png",
    "java/res/drawable-xxxhdpi/ic_add_to_home_screen_r.png",
    "java/res/drawable-hdpi/ic_bookmarks.png",
    "java/res/drawable-mdpi/ic_bookmarks.png",
    "java/res/drawable-xhdpi/ic_bookmarks.png",
    "java/res/drawable-xxhdpi/ic_bookmarks.png",
    "java/res/drawable-xxxhdpi/ic_bookmarks.png",
    "java/res/drawable-hdpi/ic_clear_data.png",
    "java/res/drawable-mdpi/ic_clear_data.png",
    "java/res/drawable-xhdpi/ic_clear_data.png",
    "java/res/drawable-xxhdpi/ic_clear_data.png",
    "java/res/drawable-xxxhdpi/ic_clear_data.png",
    "java/res/drawable-hdpi/ic_desktop_mode.png",
    "java/res/drawable-mdpi/ic_desktop_mode.png",
    "java/res/drawable-xhdpi/ic_desktop_mode.png",
    "java/res/drawable-xxhdpi/ic_desktop_mode.png",
    "java/res/drawable-xxxhdpi/ic_desktop_mode.png",
    "java/res/drawable-hdpi/ic_devtools.png",
    "java/res/drawable-mdpi/ic_devtools.png",
    "java/res/drawable-xhdpi/ic_devtools.png",
    "java/res/drawable-xxhdpi/ic_devtools.png",
    "java/res/drawable-xxxhdpi/ic_devtools.png",
    "java/res/drawable-hdpi/ic_downloads.png",
    "java/res/drawable-mdpi/ic_downloads.png",
    "java/res/drawable-xhdpi/ic_downloads.png",
    "java/res/drawable-xxhdpi/ic_downloads.png",
    "java/res/drawable-xxxhdpi/ic_downloads.png",
    "java/res/drawable-hdpi/ic_exit_to_app_white_24dp.png",
    "java/res/drawable-mdpi/ic_exit_to_app_white_24dp.png",
    "java/res/drawable-xhdpi/ic_exit_to_app_white_24dp.png",
    "java/res/drawable-xxhdpi/ic_exit_to_app_white_24dp.png",
    "java/res/drawable-xxxhdpi/ic_exit_to_app_white_24dp.png",
    "java/res/drawable-hdpi/ic_extensions.png",
    "java/res/drawable-mdpi/ic_extensions.png",
    "java/res/drawable-xhdpi/ic_extensions.png",
    "java/res/drawable-xxhdpi/ic_extensions.png",
    "java/res/drawable-xxxhdpi/ic_extensions.png",
    "java/res/drawable-hdpi/ic_find_in_page_r.png",
    "java/res/drawable-mdpi/ic_find_in_page_r.png",
    "java/res/drawable-xhdpi/ic_find_in_page_r.png",
    "java/res/drawable-xxhdpi/ic_find_in_page_r.png",
    "java/res/drawable-xxxhdpi/ic_find_in_page_r.png",
    "java/res/drawable-hdpi/ic_new_tab.png",
    "java/res/drawable-mdpi/ic_new_tab.png",
    "java/res/drawable-xhdpi/ic_new_tab.png",
    "java/res/drawable-xxhdpi/ic_new_tab.png",
    "java/res/drawable-xxxhdpi/ic_new_tab.png",
    "java/res/drawable-hdpi/ic_night_mode_off.png",
    "java/res/drawable-mdpi/ic_night_mode_off.png",
    "java/res/drawable-xhdpi/ic_night_mode_off.png",
    "java/res/drawable-xxhdpi/ic_night_mode_off.png",
    "java/res/drawable-xxxhdpi/ic_night_mode_off.png",
    "java/res/drawable-hdpi/ic_night_mode_on.png",
    "java/res/drawable-mdpi/ic_night_mode_on.png",
    "java/res/drawable-xhdpi/ic_night_mode_on.png",
    "java/res/drawable-xxhdpi/ic_night_mode_on.png",
    "java/res/drawable-xxxhdpi/ic_night_mode_on.png",
    "java/res/drawable-hdpi/ics_passwords.png",
    "java/res/drawable-mdpi/ics_passwords.png",
    "java/res/drawable-xhdpi/ics_passwords.png",
    "java/res/drawable-xxhdpi/ics_passwords.png",
    "java/res/drawable-xxxhdpi/ics_passwords.png",
    "java/res/drawable-hdpi/ic_photo_camera.png",
    "java/res/drawable-mdpi/ic_photo_camera.png",
    "java/res/drawable-xhdpi/ic_photo_camera.png",
    "java/res/drawable-xxhdpi/ic_photo_camera.png",
    "java/res/drawable-xxxhdpi/ic_photo_camera.png",
    "java/res/drawable-hdpi/ic_recent_tabs.png",
    "java/res/drawable-mdpi/ic_recent_tabs.png",
    "java/res/drawable-xhdpi/ic_recent_tabs.png",
    "java/res/drawable-xxhdpi/ic_recent_tabs.png",
    "java/res/drawable-xxxhdpi/ic_recent_tabs.png",
    "java/res/drawable-hdpi/ic_share.png",
    "java/res/drawable-mdpi/ic_share.png",
    "java/res/drawable-xhdpi/ic_share.png",
    "java/res/drawable-xxhdpi/ic_share.png",
    "java/res/drawable-xxxhdpi/ic_share.png",
    "java/res/drawable-hdpi/ic_translate_r.png",
    "java/res/drawable-mdpi/ic_translate_r.png",
    "java/res/drawable-xhdpi/ic_translate_r.png",
    "java/res/drawable-xxhdpi/ic_translate_r.png",
    "java/res/drawable-xxxhdpi/ic_translate_r.png",
    "java/res/drawable-hdpi/ic_warning_white_24dp.png",
    "java/res/drawable-mdpi/ic_warning_white_24dp.png",
    "java/res/drawable-xhdpi/ic_warning_white_24dp.png",
    "java/res/drawable-xxhdpi/ic_warning_white_24dp.png",
    "java/res/drawable-xxxhdpi/ic_warning_white_24dp.png",
    "java/res/drawable-hdpi/ics_clear_data.png",
    "java/res/drawable-mdpi/ics_clear_data.png",
    "java/res/drawable-xhdpi/ics_clear_data.png",
    "java/res/drawable-xxhdpi/ics_clear_data.png",
    "java/res/drawable-xxxhdpi/ics_clear_data.png",
    "java/res/drawable-hdpi/ics_lite_mode.png",
    "java/res/drawable-mdpi/ics_lite_mode.png",
    "java/res/drawable-xhdpi/ics_lite_mode.png",
    "java/res/drawable-xxhdpi/ics_lite_mode.png",
    "java/res/drawable-xxxhdpi/ics_lite_mode.png",
    "java/res/drawable-hdpi/ics_privacy_security.png",
    "java/res/drawable-mdpi/ics_privacy_security.png",
    "java/res/drawable-xhdpi/ics_privacy_security.png",
    "java/res/drawable-xxhdpi/ics_privacy_security.png",
    "java/res/drawable-xxxhdpi/ics_privacy_security.png",
    "java/res/drawable-hdpi/ics_services.png",
    "java/res/drawable-mdpi/ics_services.png",
    "java/res/drawable-xhdpi/ics_services.png",
    "java/res/drawable-xxhdpi/ics_services.png",
    "java/res/drawable-xxxhdpi/ics_services.png",
    "java/res/drawable-hdpi/ics_tab_switcher.png",
    "java/res/drawable-mdpi/ics_tab_switcher.png",
    "java/res/drawable-xhdpi/ics_tab_switcher.png",
    "java/res/drawable-xxhdpi/ics_tab_switcher.png",
    "java/res/drawable-xxxhdpi/ics_tab_switcher.png",
    "java/res/drawable-hdpi/ics_website_settings.png",
    "java/res/drawable-mdpi/ics_website_settings.png",
    "java/res/drawable-xhdpi/ics_website_settings.png",
    "java/res/drawable-xxhdpi/ics_website_settings.png",
    "java/res/drawable-xxxhdpi/ics_website_settings.png",
    "java/res/drawable-hdpi/menu_update.png",
    "java/res/drawable-mdpi/menu_update.png",
    "java/res/drawable-xhdpi/menu_update.png",
    "java/res/drawable-xxhdpi/menu_update.png",
    "java/res/drawable-xxxhdpi/menu_update.png",
    "java/res/drawable-hdpi/open_in_new_tab.png",
    "java/res/drawable-mdpi/open_in_new_tab.png",
    "java/res/drawable-xhdpi/open_in_new_tab.png",
    "java/res/drawable-xxhdpi/open_in_new_tab.png",
    "java/res/drawable-xxxhdpi/open_in_new_tab.png",
    "java/res/drawable-hdpi/permission_push_notification_off.png",
    "java/res/drawable-mdpi/permission_push_notification_off.png",
    "java/res/drawable-xhdpi/permission_push_notification_off.png",
    "java/res/drawable-xxhdpi/permission_push_notification_off.png",
    "java/res/drawable-xxxhdpi/permission_push_notification_off.png",
    "java/res/drawable-hdpi/ics_accessibility.png",
    "java/res/drawable-mdpi/ics_accessibility.png",
    "java/res/drawable-xhdpi/ics_accessibility.png",
    "java/res/drawable-xxhdpi/ics_accessibility.png",
    "java/res/drawable-xxxhdpi/ics_accessibility.png",
    "java/res/drawable-hdpi/btn_right.png",
    "java/res/drawable-mdpi/btn_right.png",
    "java/res/drawable-xhdpi/btn_right.png",
    "java/res/drawable-xxhdpi/btn_right.png",
    "java/res/drawable-xxxhdpi/btn_right.png",
    "java/res/drawable-hdpi/help_outline.png",
    "java/res/drawable-mdpi/help_outline.png",
    "java/res/drawable-xhdpi/help_outline.png",
    "java/res/drawable-xxhdpi/help_outline.png",
    "java/res/drawable-xxxhdpi/help_outline.png",
    "java/res/drawable-hdpi/ic_incognito.png",
    "java/res/drawable-mdpi/ic_incognito.png",
    "java/res/drawable-xhdpi/ic_incognito.png",
    "java/res/drawable-xxhdpi/ic_incognito.png",
    "java/res/drawable-xxxhdpi/ic_incognito.png",
    "java/res/drawable-hdpi/ics_payments.png",
    "java/res/drawable-mdpi/ics_payments.png",
    "java/res/drawable-xhdpi/ics_payments.png",
    "java/res/drawable-xxhdpi/ics_payments.png",
    "java/res/drawable-xxxhdpi/ics_payments.png",
    "java/res/drawable-hdpi/ics_search_engine.png",
    "java/res/drawable-mdpi/ics_search_engine.png",
    "java/res/drawable-xhdpi/ics_search_engine.png",
    "java/res/drawable-xxhdpi/ics_search_engine.png",
    "java/res/drawable-xxxhdpi/ics_search_engine.png",
    "java/res/drawable-hdpi/ics_theme.png",
    "java/res/drawable-mdpi/ics_theme.png",
    "java/res/drawable-xhdpi/ics_theme.png",
    "java/res/drawable-xxhdpi/ics_theme.png",
    "java/res/drawable-xxxhdpi/ics_theme.png",
    "java/res/drawable-hdpi/ics_toolbar_shortcut.png",
    "java/res/drawable-mdpi/ics_toolbar_shortcut.png",
    "java/res/drawable-xhdpi/ics_toolbar_shortcut.png",
    "java/res/drawable-xxhdpi/ics_toolbar_shortcut.png",
    "java/res/drawable-xxxhdpi/ics_toolbar_shortcut.png",
    "java/res/drawable-hdpi/ics_addresses.png",
    "java/res/drawable-mdpi/ics_addresses.png",
    "java/res/drawable-xhdpi/ics_addresses.png",
    "java/res/drawable-xxhdpi/ics_addresses.png",
    "java/res/drawable-xxxhdpi/ics_addresses.png",
    "java/res/drawable-hdpi/ics_dev_options.png",
    "java/res/drawable-mdpi/ics_dev_options.png",
    "java/res/drawable-xhdpi/ics_dev_options.png",
    "java/res/drawable-xxhdpi/ics_dev_options.png",
    "java/res/drawable-xxxhdpi/ics_dev_options.png",
    "java/res/drawable-hdpi/ics_night_mode.png",
    "java/res/drawable-mdpi/ics_night_mode.png",
    "java/res/drawable-xhdpi/ics_night_mode.png",
    "java/res/drawable-xxhdpi/ics_night_mode.png",
    "java/res/drawable-xxxhdpi/ics_night_mode.png",
    "java/res/drawable-hdpi/ics_notifications.png",
    "java/res/drawable-mdpi/ics_notifications.png",
    "java/res/drawable-xhdpi/ics_notifications.png",
    "java/res/drawable-xxhdpi/ics_notifications.png",
    "java/res/drawable-xxxhdpi/ics_notifications.png",
    "java/res/drawable-hdpi/ics_edit_homepage.png",
    "java/res/drawable-mdpi/ics_edit_homepage.png",
    "java/res/drawable-xhdpi/ics_edit_homepage.png",
    "java/res/drawable-xxhdpi/ics_edit_homepage.png",
    "java/res/drawable-xxxhdpi/ics_edit_homepage.png",
    "java/res/drawable-hdpi/ics_languages.png",
    "java/res/drawable-mdpi/ics_languages.png",
    "java/res/drawable-xhdpi/ics_languages.png",
    "java/res/drawable-xxhdpi/ics_languages.png",
    "java/res/drawable-xxxhdpi/ics_languages.png",
    "java/res/drawable-hdpi/location_bar_incognito_badge.png",
    "java/res/drawable-mdpi/location_bar_incognito_badge.png",
    "java/res/drawable-xhdpi/location_bar_incognito_badge.png",
    "java/res/drawable-xxhdpi/location_bar_incognito_badge.png",
    "java/res/drawable-xxxhdpi/location_bar_incognito_badge.png"
]
